--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,7 +1,7 @@
-<header class='bg-black'>
-  <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
-</header>
-<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
+<div
+  class='absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]'
+>
+</div>
 
 <div class='min-h-screen flex items-center justify-center bg-gray-100'>
   <div class='bg-white p-8 rounded shadow-md w-96'>
@@ -9,18 +9,24 @@
 
     <div>
       {{#each cart.products}}
-      <div class='card card-body rounded-2 mb-2 animate__animated animate__fadeInUp background'>
-        <div class='flex justify-between'>
-          <h1 class='text-lg font-semibold'>{{this.product.title}}</h1>
-          <p class='text-base'>Quantity: {{this.quantity}}</p>
+        <div
+          class='card card-body rounded-2 mb-2 animate__animated animate__fadeInUp background'
+        >
+          <div class='flex justify-between'>
+            <h1 class='text-lg font-semibold'>{{this.product.title}}</h1>
+            <p class='text-base'>Quantity: {{this.quantity}}</p>
+          </div>
+          <p class='text-sm'>Description: {{this.product.description}}</p>
+          <p class='text-sm'>Code: {{this.product.code}}</p>
+          <p class='text-sm'>Price: {{this.product.price}}</p>
+          <p class='text-sm'>Status: {{this.product.status}}</p>
+          <p class='text-sm'>Category: {{this.product.category}}</p>
+          <img
+            src='{{this.product.thumbnails}}'
+            alt='Product Image'
+            class='w-full h-auto mt-2'
+          />
         </div>
-        <p class='text-sm'>Description: {{this.product.description}}</p>
-        <p class='text-sm'>Code: {{this.product.code}}</p>
-        <p class='text-sm'>Price: {{this.product.price}}</p>
-        <p class='text-sm'>Status: {{this.product.status}}</p>
-        <p class='text-sm'>Category: {{this.product.category}}</p>
-        <img src='{{this.product.thumbnails}}' alt='Product Image' class='w-full h-auto mt-2' />
-      </div>
       {{/each}}
     </div>
   </div>
