--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,13 +1,10 @@
-<header class='bg-black'>
-  <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
-</header>
-
 <div
-  class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
+  class='absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]'
+></div>
 
-<main class='flex  max-w-5xl container mx-auto py-12 lg:px-8'>
-  <div class="flex flex-col">
-    <div class="flex gap-2">
+<main class='flex max-w-5xl container mx-auto py-12 lg:px-8'>
+  <div class='flex flex-col'>
+    <div class='flex gap-2'>
 
       <a href='/cartsuser' class='text-blue-500 hover:underline'>Ir a ver mi
         carrito</a><br />
@@ -20,26 +17,33 @@
         <h1 class='text-2xl font-bold mb-5'>Escribe un mensaje</h1>
 
         <div class='mb-4'>
-          <textarea name='message' id='message' rows='2'
+          <textarea
+            name='message'
+            id='message'
+            rows='2'
             placeholder='Escribe tu mensaje'
-            class='w-full border rounded p-2' required></textarea>
+            class='w-full border rounded p-2'
+            required
+          ></textarea>
         </div>
-        <button type='submit'
-          class='w-full bg-blue-500 text-white p-3 rounded hover:bg-blue-600'>Enviar</button>
+        <button
+          type='submit'
+          class='w-full bg-blue-500 text-white p-3 rounded hover:bg-blue-600'
+        >Enviar</button>
       </form>
     </div>
   </div>
 
   <div class='max-w-xl container mx-auto'>
     {{#each messages}}
-    <div class='mb-2'>
-      <div class='p-4 bg-white rounded-md shadow-md'>
-        <h1 class='text-lg font-semibold'>{{this.user}}</h1>
-        <p>{{this.message}}</p>
+      <div class='mb-2'>
+        <div class='p-4 bg-white rounded-md shadow-md'>
+          <h1 class='text-lg font-semibold'>{{this.user}}</h1>
+          <p>{{this.message}}</p>
+        </div>
       </div>
-    </div>
     {{else}}
-    <p class='text-gray-500'>No hay mensajes disponibles.</p>
+      <p class='text-gray-500'>No hay mensajes disponibles.</p>
     {{/each}}
   </div>
 </main>
