--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,7 +1,6 @@
-<header class='bg-black'>
-  <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
-</header>
-<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
+<div
+  class='absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]'
+></div>
 
 <div class='bg-gray-100 min-h-screen flex items-center justify-center'>
   <div class='bg-white p-8 rounded shadow-md'>
@@ -12,53 +11,96 @@
         <label for='firstname' class='block text-sm font-medium text-gray-600'>
           Nombre del usuario
         </label>
-        <input type='text' name='firstname' id='firstname' placeholder='Introduzca su nombre' required
-          class='mt-1 p-2 border rounded w-full' />
+        <input
+          type='text'
+          name='firstname'
+          id='firstname'
+          placeholder='Introduzca su nombre'
+          required
+          class='mt-1 p-2 border rounded w-full'
+        />
       </div>
 
       <div class='mb-4'>
         <label for='lastname' class='block text-sm font-medium text-gray-600'>
           Apellido
         </label>
-        <input type='text' name='lastname' id='lastname' placeholder='Introduzca su apellido' required
-          class='mt-1 p-2 border rounded w-full' />
+        <input
+          type='text'
+          name='lastname'
+          id='lastname'
+          placeholder='Introduzca su apellido'
+          required
+          class='mt-1 p-2 border rounded w-full'
+        />
       </div>
 
       <div class='mb-4'>
         <label for='email' class='block text-sm font-medium text-gray-600'>
           Email
         </label>
-        <input type='email' name='email' id='email' placeholder='Introduzca su correo electrónico' required
-          class='mt-1 p-2 border rounded w-full' />
+        <input
+          type='email'
+          name='email'
+          id='email'
+          placeholder='Introduzca su correo electrónico'
+          required
+          class='mt-1 p-2 border rounded w-full'
+        />
       </div>
 
       <div class='mb-4'>
         <label for='age' class='block text-sm font-medium text-gray-600'>
           Edad
         </label>
-        <input type='number' name='age' id='age' placeholder='Introduzca su edad' min='0' required
-          class='mt-1 p-2 border rounded w-full' />
+        <input
+          type='number'
+          name='age'
+          id='age'
+          placeholder='Introduzca su edad'
+          min='0'
+          required
+          class='mt-1 p-2 border rounded w-full'
+        />
       </div>
 
       <div class='mb-4'>
         <label for='password' class='block text-sm font-medium text-gray-600'>
           Contraseña
         </label>
-        <input type='password' name='password' id='password' placeholder='Introduzca su contraseña' required
-          class='mt-1 p-2 border rounded w-full' />
+        <input
+          type='password'
+          name='password'
+          id='password'
+          placeholder='Introduzca su contraseña'
+          required
+          class='mt-1 p-2 border rounded w-full'
+        />
       </div>
       <div class='flex'>
 
-        <button type='submit' class='bg-blue-500 text-white p-2 rounded hover:bg-blue-600'>
+        <button
+          type='submit'
+          class='bg-blue-500 text-white p-2 rounded hover:bg-blue-600'
+        >
           Enviar
         </button>
-        <a href='/api/session/github'
-          class='w-full justify-center text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30 me-2 mb-2'>
-          <svg class='w-4 h-4 me-2' aria-hidden='true' xmlns='http://www.w3.org/2000/svg' fill='currentColor'
-            viewBox='0 0 20 20'>
-            <path fill-rule='evenodd'
+        <a
+          href='/api/session/github'
+          class='w-full justify-center text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30 me-2 mb-2'
+        >
+          <svg
+            class='w-4 h-4 me-2'
+            aria-hidden='true'
+            xmlns='http://www.w3.org/2000/svg'
+            fill='currentColor'
+            viewBox='0 0 20 20'
+          >
+            <path
+              fill-rule='evenodd'
               d='M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z'
-              clip-rule='evenodd' />
+              clip-rule='evenodd'
+            />
           </svg>
           Logearse Con Github
         </a>
