refactor: change main to layout

--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,4 +1,4 @@
-<header class="bg-white shadow-sm border-b border-gray-200"></header>
+<header class="bg-white shadow-sm border-b border-gray-200">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-16">
       <div class="flex items-center">
