feat: Implement product detail page and enhance user experience

--- a/src/views/partials/footer.handlebars
+++ b/src/views/partials/footer.handlebars
@@ -103,7 +103,7 @@
         <p class='text-gray-500 text-sm'>
           ©
           {{currentYear}}
-          {{#if brandName}}{{brandName}}{{else}}Mi App{{/if}}. Todos los
+          {{#if brandName}}{{brandName}}{{else}}Vestimenta Catan{{/if}}. Todos los
           derechos reservados.
         </p>
         <div class='mt-4 md:mt-0 flex space-x-6'>
