--- a/src/views/layouts/layout.handlebars
+++ b/src/views/layouts/layout.handlebars
@@ -16,7 +16,7 @@
     ::-webkit-scrollbar-thumb:hover { background: #a8a8a8; }
   </style>
   
-  <title>{{#if title}}{{title}}{{else}}Mi App{{/if}}</title>
+  <title>{{#if title}}{{title}}{{else}}Vestimenta Catan{{/if}}</title>
 </head>
 
 <body class="h-full flex flex-col ">
