--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -13,13 +13,12 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {{#each productos}}
           {{#if (hasStock this)}}
-            <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300">
-              <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden">
-                <img 
-                  src="{{thumbnail}}" 
-                  alt="{{producto}} - {{genero}}"
-                  class="w-full h-64 object-cover object-center hover:scale-105 transition-transform duration-300"
-                />
+            <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300">            <div class="product-image-container">
+              <img 
+                src="{{thumbnail}}" 
+                alt="{{producto}} - {{genero}}"
+                class="product-image"
+              />
               </div>
               
               <div class="p-6">
